--- a/ClientApp/src/style.css
+++ b/ClientApp/src/style.css
@@ -1,15 +1,14 @@
-﻿html, body {
-    height: 100%;
-    width: 100%;
+﻿@import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap');
+
+html, body {
+    max-height: 100%;
+    max-width: 100%;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
-.form input[type=text], .form input[type=password] {
-    display: inline-block;
-    width: 60%;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+h1, h2, h3, h4 {
+    font-weight: bold;
 }
 
 .login-wrapper, .register-wrapper {
@@ -22,9 +21,7 @@
 .login-container, .register-container {
     text-align: center;
 }
-::-webkit-input-placeholder {
-    text-align: center;
-}
+
 
 .todo-list-wrapper {
     width: 80%;
@@ -33,8 +30,9 @@
 
 .todo-item-container {
     display: grid;
-    grid-template-columns: 5fr 1fr;
+    grid-template-columns: 5fr 2fr;
     grid-template-areas: "todo btn";
+    background-color: #edd5d5;
 }
 
 #todo-item {
@@ -44,6 +42,7 @@
 }
 #todo-item-title {
     grid-area: title;
+    
 }
 
 #todo-item-desc {
@@ -54,14 +53,98 @@
     grid-area: type;
 }
 
+#complete-btn {
+    grid-area: complete;
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    
+}
+
 #delete-btn {
-    grid-area: btn;
+    grid-area: delete;
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    
 }
 
-.todo-item {
-    background-color: #f3f3f3;
+.btn-container {
+    position: relative;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: 1fr fr;
+    grid-template-areas: "complete delete";
 }
 
-.todo-item-completed  {
-    text-decoration-line: line-through;
+.add-task-form {
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.form input, .form select, .form textarea, .input-group-prepend {
+    margin: 8px auto;
+}
+
+.icon {
+    vertical-align: middle;
+}
+
+.task-list-container {
+    margin: 10px;
+}
+
+.todo-completed {
+    background-color: #d3edd3;
+}
+
+.todo-item-container {
+    margin: 10px 0;
+}
+
+.todo-item-container p, .todo-item-container h2 {
+    margin: 8px;
+}
+
+.user-todo-list-items {
+    margin-left: 20px;
+}
+
+.input-group {
+    width: 85%;
+}
+
+.todo-item p {
+    margin-left: 50px;
+}
+
+.user-todo-list-container {
+    width: 50%;
+    margin: 10px;
+    padding: 20px;
+}
+
+.user-todo-item-icon {
+    grid-area: icon;
+    height: 50px;
+    width: 50px;
+}
+
+.user-todo-item-container {
+    display: grid;
+    grid-template-columns: 1fr 10fr;
+    grid-template-areas: "icon list";
+    margin: 10px 0;
+}
+
+.user-todo-item-list {
+    grid-area: list;
+}
+
+.user-list-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
